--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
     "allowJs": true,
-    "baseUrl": "./src",
+    "baseUrl": "./src/",
     "checkJs": false,
     "declaration": true,
     "esModuleInterop": true,
@@ -20,10 +20,10 @@
     "noImplicitAny": true,
     "paths": {
       "@/*": [
-        "*"
+        "./*"
       ],
       "~/*": [
-        "*"
+        "./*"
       ]
     },
     "suppressImplicitAnyIndexErrors": true,
@@ -40,7 +40,22 @@
       "web3-core/types",
       "@inkline/inkline/types",
       "nuxt-typed-vuex",
-      "typed-vuex"
+      "vue-qrcode"
+    ],
+    "typeRoots": [
+      "./node_modules/@types",
+      "./node_modules/@nuxt/types",
+      "./src/types"
     ]
-  }
+  },
+  "exclude": [
+    "node_modules/*",
+    "dist/*",
+    ".yarn/*",
+    "public/*",
+    ".nuxt/*",
+    ".github/*",
+    "environments/*",
+    "tests/*"
+  ]
 }
