fix: optimized a configuration, reverted files

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,11 +1,12 @@
-node_modules
-.nuxt
-src/static
-.github
-.idea
+/node_modules
+/.nuxt
+/src/static
+/.firebase
+/.github
+/.idea
 *yarn*
-environments
-*sw.*
-public
-tests
+/environments
+/_nuxt
+/tests
+/public
 *.sh
