--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,6 +1,6 @@
 {
   "extends": [
-    "stylelint-config-standard"
+    "stylelint-config-standard-scss"
   ],
   "plugins": [
     "stylelint-scss"
@@ -12,6 +12,7 @@
         "severity": "notice"
       }
     ],
+    "scss/double-slash-comment-whitespace-inside": null,
     "block-no-empty": null,
     "block-opening-brace-newline-after": "always",
     "color-named": "never",
@@ -57,7 +58,7 @@
         ]
       }
     ],
-    "selector-pseudo-element-colon-notation": "single",
+    "selector-pseudo-element-colon-notation": null,
     "selector-type-no-unknown": [
       true,
       {
