--- a/package.json
+++ b/package.json
@@ -66,15 +66,17 @@
     "lottie-web": "^5.7.8",
     "mixpanel-browser": "^2.42.0",
     "moment-timezone": "^0.5.33",
+    "multiformats": "^9.4.7",
     "nuxt": "latest",
-    "nuxt-typed-vuex": "^0.2.0",
-    "oh-vue-icons": "^1.0.0-rc1",
-    "typed-vuex": "^0.2.0",
-    "vue": "^2.6.14",
-    "vue-qrcode": "^0.4.0",
-    "vue-router": "^3.5.3",
+    "nuxt-typed-vuex": "latest",
+    "oh-vue-icons": "^0.4.7",
+    "typed-vuex": "latest",
+    "vue": "2.*",
+    "vue-class-component": "latest",
+    "vue-qrcode": "0.4.0",
+    "vue-router": "^3.5.2",
     "vue-scrollto": "^2.20.0",
-    "zksync": "^0.11.6"
+    "zksync": "latest"
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
@@ -82,11 +84,9 @@
     "@babel/runtime": "^7.13.10",
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^16.0.0",
-    "@ethersproject/logger": "^5.4.0",
     "@inkline/nuxt": "^2.3.6",
     "@nuxt/types": "latest",
     "@nuxt/typescript-build": "latest",
-    "@nuxtjs/composition-api": "^0.29.3",
     "@nuxtjs/dotenv": "latest",
     "@nuxtjs/eslint-config-typescript": "latest",
     "@nuxtjs/google-fonts": "latest",
@@ -107,20 +107,24 @@
     "eslint": "^7.21.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-prettier-vue": "^3.1.0",
+    "eslint-plugin-prettier-vue": "^2.1.1",
+    "eslint-plugin-vue": "^7.7.0",
     "fork-ts-checker-webpack-plugin": "^6.1.0",
     "husky": "^7.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^12.1.5",
     "node-sass": "4.14.0",
+    "postcss-scss": "^4.0.3",
     "prettier": "^2.2.1",
+    "qrcode": "^1.0.0",
     "sass-loader": "^10.1.1",
     "semantic-release": "^18.0.1",
-    "stylelint": "^13.12.0",
-    "stylelint-config-standard": "^21.0.0",
-    "stylelint-scss": "^3.19.0",
+    "stylelint": "latest",
+    "stylelint-config-standard-scss": "^3.0.0",
+    "stylelint-scss": "latest",
     "typescript": "4.2.4",
     "vue-property-decorator": "latest",
+    "vuex": "^3.6.2",
     "webpack": "^4.46.0"
   },
   "peerDependencies": {
@@ -147,14 +151,10 @@
   "lint-fix": [
     "yarn lint-style:fix",
     "yarn lint-ts:fix",
-    "yarn format",
+    "yarn format:prettier --write",
     "yarn spell-check"
   ],
   "lint-staged": {
-    "*.scss": [
-      "yarn lint-style:check --fix",
-      "yarn format"
-    ],
     "*.{ts,tsx,vue}": [
       "yarn lint-ts:check --fix",
       "yarn format",
@@ -162,7 +162,7 @@
     ]
   },
   "scripts": {
-    "local": "sh ./cli-process-env.sh 'rinkeby' 'dev' 1 1",
+    "local": "sh ./cli-process-env.sh 'rinkeby-beta' 'prod' 1 1",
     "dev": "yarn local && nuxt",
     "generate": "nuxt generate ",
     "start": "yarn local && nuxt start",
@@ -179,13 +179,14 @@
     "ci:prepare:rinkeby": "sh cli-process-env.sh 'rinkeby' prod 1",
     "ci:prepare:ropsten": "sh cli-process-env.sh 'ropsten' prod 1",
     "ci:prepare:mainnet": "sh cli-process-env.sh 'mainnet' prod 1",
-    "ci:check": "yarn lint-ts:check && yarn lint-style:check && yarn spell-check",
-    "format": "prettier --config .prettierrc.js --ignore-path .prettierignore",
+    "test": "jest",
+    "format:prettier": "prettier --config .prettierrc.js --ignore-path .prettierignore",
     "lint-ts:check": "eslint --config .eslintrc.js --ignore-path .eslintignore",
-    "lint-ts:fix": "yarn lint-ts:check --fix src/**/*.{ts,vue,js}",
+    "lint-ts:fix": "yarn lint-ts:check --fix ./src/**/*.{ts,vue,js}",
     "lint-style:check": "stylelint --config .stylelintrc --ignore-path .stylelintignore",
-    "lint-style:fix": "yarn lint-style:check --fix src/**/*.scss",
+    "lint-style:fix": "yarn lint-style:check --fix ./src/**/*.scss",
     "spell-check": "cspell -c cspell.json src/**/*.{ts,vue,js} *.md",
+    "ci:check": "yarn lint-ts:check && yarn lint-style:check && yarn spell-check",
     "semantic-release": "semantic-release",
     "postinstall": "husky install"
   },
