--- a/.prettierignore
+++ b/.prettierignore
@@ -1,15 +1,12 @@
-node_modules
-.nuxt
-src/static
-.firebase
-.github
-.idea
+/node_modules
+/.nuxt
+/src/static
+/.firebase
+/.github
+/.idea
 *yarn*
-environments
-_nuxt
-tests/*
-*.example
-node_modules/*
-public
-tests
+/environments
+/_nuxt
+/tests
+/public
 *.sh
