--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -42,24 +42,4 @@ jobs:
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE_MAINNET }}"
           target: mainnet
           projectId: zksync-vue-mainnet
-          channelID: live
-
-      - name: "Deploy target: prod-rinkeby"
-        run: yarn run ci:build:rinkeby
-      - uses: matter-labs/action-hosting-deploy@v0
-        with:
-          repoToken: "${{ secrets.GITHUB_TOKEN }}"
-          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}"
-          target: prod-rinkeby
-          projectId: zksync-vue
-          channelID: live
-
-      - name: "Deploy target: prod-ropsten"
-        run: yarn run ci:build:ropsten
-      - uses: matter-labs/action-hosting-deploy@v0
-        with:
-          repoToken: "${{ secrets.GITHUB_TOKEN }}"
-          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}"
-          target: prod-ropsten
-          projectId: zksync-vue
-          channelID: live
+          channelId: live
