--- a/firebase.json
+++ b/firebase.json
@@ -156,7 +156,7 @@
       ]
     },
     {
-      "target": "beta-rinkeby",
+      "target": "rinkeby-beta",
       "public": "public",
       "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
       "redirects": [
