feat: banxa & moonpay functions added
 * both lambda built;
 * structure designed;
 * functions are deployed;
 * moonpay enabled;

--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -14,7 +14,8 @@
     ".ide-setup**",
     ".firebase**",
     ".github**",
-    "tests**"
+    "tests**",
+    "functions**"
   ],
   "compilerOptions": {
     "lib": [
