--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,35 @@
 {
+  "functions": {
+    "predeploy": "npm --prefix functions run build",
+
+    "source": "functions"
+  },
+  "emulators": {
+    "functions": {
+      "port": 5001
+    },
+    "ui": {
+      "enabled": true
+    }
+  },
   "hosting": [
     {
       "target": "stage-mainnet",
       "public": "public",
-      "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+      ],
       "rewrites": [
+        {
+          "source": "/api/banxaAuth",
+          "function": "banxaAuth"
+        },
+        {
+          "source": "/api/moonpaySign",
+          "function": "moonpaySign"
+        },
         {
           "source": "**",
           "destination": "/index.html"
@@ -41,7 +66,11 @@
     {
       "target": "prod-ropsten",
       "public": "public",
-      "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+      ],
       "redirects": [
         {
           "source": "**",
@@ -80,7 +109,11 @@
     {
       "target": "ropsten-beta",
       "public": "public",
-      "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+      ],
       "redirects": [
         {
           "source": "**",
@@ -119,7 +152,11 @@
     {
       "target": "prod-rinkeby",
       "public": "public",
-      "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+      ],
       "redirects": [
         {
           "source": "**",
@@ -158,7 +195,11 @@
     {
       "target": "rinkeby-beta",
       "public": "public",
-      "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+      ],
       "redirects": [
         {
           "source": "**",
@@ -197,8 +238,20 @@
     {
       "target": "mainnet",
       "public": "public",
-      "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+      ],
       "rewrites": [
+        {
+          "source": "/api/banxaAuth",
+          "function": "banxaAuth"
+        },
+        {
+          "source": "/api/moonpaySign",
+          "function": "moonpaySign"
+        },
         {
           "source": "**",
           "destination": "/index.html"
