--- a/functions/package.json
+++ b/functions/package.json
@@ -2,7 +2,7 @@
   "name": "functions",
   "scripts": {
     "build:dev": "rimraf ./lib/**/* && tsc --watch",
-    "build": "rimraf ./lib/**/* && npm run lint && rollup -c rollup.config.js",
+    "build": "rimraf ./lib/**/* && rollup -c rollup.config.js",
     "serve:dev": "firebase emulators:start --only functions",
     "serve": "npm run build && firebase emulators:start --only functions",
     "shell": "firebase functions:shell",
@@ -20,10 +20,10 @@
   "dependencies": {
     "@google-cloud/functions-framework": "^2.1.0",
     "cors": "^2.8.5",
+    "crypto": "latest",
     "firebase-admin": "^10.0.0",
     "firebase-functions": "^3.16.0",
-    "tslib": "^2.3.1",
-    "crypto": "latest"
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^13.0.6",
