feat: banxa & moonpay functions prepared + sentry added
 * both lambda built;
 * structure designed;
 * functions are deployed;
 * moonpay enabled;
 * senty tunnel added;

 Closes ZKF-1532

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,9 @@ public
 /cypress/screenshots/examples/misc.spec.js/
 /cypress/videos/examples/
 /.eslintcache
+
+# Functions
+/functions/node_modules
+/functions/lib
+/functions/*.log
+/functions/.runtimeconfig.json
