--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,6 @@
 {
   "functions": {
     "predeploy": "npm --prefix functions run build",
-
     "source": "functions"
   },
   "emulators": {
@@ -29,6 +28,10 @@
         {
           "source": "/api/moonpaySign",
           "function": "moonpaySign"
+        },
+        {
+          "source": "/tunnel/sentry",
+          "function": "sentryTunnel"
         },
         {
           "source": "**",
@@ -68,7 +71,7 @@
       "public": "public",
       "ignore": [
         "firebase.json",
-        "**/.*",
+        "**/**",
         "**/node_modules/**"
       ],
       "redirects": [
@@ -76,33 +79,6 @@
           "source": "**",
           "type": 301,
           "destination": "https://wallet.zksync.io?network=ropsten"
-        }
-      ],
-      "headers": [
-        {
-          "source": "**",
-          "headers": [
-            {
-              "key": "Cache-Control",
-              "value": "no-cache, no-store, must-revalidate"
-            },
-            {
-              "key": "Referrer-Policy",
-              "value": "no-referrer, strict-origin-when-cross-origin"
-            },
-            {
-              "key": "X-Content-Type-Options",
-              "value": "nosniff"
-            },
-            {
-              "key": "X-Frame-Options",
-              "value": "DENY"
-            },
-            {
-              "key": "X-XSS-Protection",
-              "value": "1; mode=block"
-            }
-          ]
         }
       ]
     },
@@ -120,33 +96,6 @@
           "type": 301,
           "destination": "https://wallet.zksync.io?network=ropsten-beta"
         }
-      ],
-      "headers": [
-        {
-          "source": "**",
-          "headers": [
-            {
-              "key": "Cache-Control",
-              "value": "no-cache, no-store, must-revalidate"
-            },
-            {
-              "key": "Referrer-Policy",
-              "value": "no-referrer, strict-origin-when-cross-origin"
-            },
-            {
-              "key": "X-Content-Type-Options",
-              "value": "nosniff"
-            },
-            {
-              "key": "X-Frame-Options",
-              "value": "DENY"
-            },
-            {
-              "key": "X-XSS-Protection",
-              "value": "1; mode=block"
-            }
-          ]
-        }
       ]
     },
     {
@@ -163,33 +112,6 @@
           "type": 301,
           "destination": "https://wallet.zksync.io?network=rinkeby"
         }
-      ],
-      "headers": [
-        {
-          "source": "**",
-          "headers": [
-            {
-              "key": "Cache-Control",
-              "value": "no-cache, no-store, must-revalidate"
-            },
-            {
-              "key": "Referrer-Policy",
-              "value": "no-referrer, strict-origin-when-cross-origin"
-            },
-            {
-              "key": "X-Content-Type-Options",
-              "value": "nosniff"
-            },
-            {
-              "key": "X-Frame-Options",
-              "value": "DENY"
-            },
-            {
-              "key": "X-XSS-Protection",
-              "value": "1; mode=block"
-            }
-          ]
-        }
       ]
     },
     {
@@ -205,33 +127,6 @@
           "source": "**",
           "type": 301,
           "destination": "https://wallet.zksync.io?network=rinkeby-beta"
-        }
-      ],
-      "headers": [
-        {
-          "source": "**",
-          "headers": [
-            {
-              "key": "Cache-Control",
-              "value": "no-cache, no-store, must-revalidate"
-            },
-            {
-              "key": "Referrer-Policy",
-              "value": "no-referrer, strict-origin-when-cross-origin"
-            },
-            {
-              "key": "X-Content-Type-Options",
-              "value": "nosniff"
-            },
-            {
-              "key": "X-Frame-Options",
-              "value": "DENY"
-            },
-            {
-              "key": "X-XSS-Protection",
-              "value": "1; mode=block"
-            }
-          ]
         }
       ]
     },
@@ -251,6 +146,10 @@
         {
           "source": "/api/moonpaySign",
           "function": "moonpaySign"
+        },
+        {
+          "source": "/tunnel/sentry",
+          "function": "sentryTunnel"
         },
         {
           "source": "**",
@@ -285,5 +184,8 @@
         }
       ]
     }
-  ]
+  ],
+  "remoteconfig": {
+    "template": "remoteconfig.template.json"
+  }
 }
