--- a/functions/package.json
+++ b/functions/package.json
@@ -1,53 +1,43 @@
 {
-  "name": "functions",
+  "name": "@matterlabs/zksync-tools-cloudfunctions",
   "scripts": {
     "build:dev": "rimraf ./lib/**/* && tsc --watch",
     "build": "rimraf ./lib/**/* && npm run lint && rollup -c rollup.config.js",
-    "serve:dev": "firebase emulators:start --only functions",
+    "serve:dev": "firebase functions:config:get > .runtimeconfig.json && firebase emulators:start --only functions",
     "serve": "npm run build && firebase emulators:start --only functions",
-    "shell": "firebase functions:shell",
+    "shell": "firebase functions:config:get > .runtimeconfig.json && firebase functions:shell",
     "start": "npm run build && npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log",
-    "lint": "eslint . --ext .ts",
-    "test": "mocha tests/**/*.spec.ts"
+    "lint": "eslint --ext .ts --config .eslintrc.json  --ignore-path .gitignore .",
+    "lint:fix": "eslint --fix --ext .ts --config .eslintrc.js  --ignore-path .gitignore ."
   },
   "packageManager": "npm",
-  "engines": {
-    "node": "14"
-  },
+  "version": "0.0.1",
   "main": "lib/index.js",
   "dependencies": {
-    "@google-cloud/functions-framework": "^2.1.0",
-    "cors": "^2.8.5",
-    "firebase-admin": "^10.0.0",
+    "cors": "latest",
+    "@sentry/node": "^6.17.2",
+    "firebase": "^8.10.1",
+    "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.16.0",
-    "tslib": "^2.3.1",
-    "crypto": "latest"
+    "node-fetch": "^3.2.0",
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^13.0.6",
     "@rollup/plugin-typescript": "^8.3.0",
-    "@types/chai": "^4.3.0",
-    "@types/cors": "^2.8.12",
-    "@types/mocha": "^9.0.0",
-    "@types/sinon": "^10.0.6",
-    "@types/sinon-chai": "^3.2.6",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
-    "chai": "^4.3.4",
     "eslint": "^8.4.1",
-    "mocha": "^9.1.3",
     "rimraf": "^3.0.2",
     "rollup": "^2.60.2",
-    "sinon": "^12.0.1",
-    "sinon-chai": "^3.7.0",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.2",
-    "eslint-config-google": "^0.14.0",
-    "eslint-plugin-import": "^2.22.0",
-    "firebase-functions-test": "^0.2.0"
+    "typescript": "^4.5.2"
   },
-  "type": "module",
-  "private": true
+  "private": true,
+  "engines": {
+    "node": "14"
+  },
+  "type": "module"
 }
