feat: multiple improvements from formatting to error-fixes  * fixed (node:56950) UnhandledPromiseRejectionWarning during ```serve``` & ```deploy```  * optional ```cors``` setup for local run only  * prettier-formatted code  * eslint set as recommended by the @firebase  * banxa (despite the fact that it's unused) changed accordingly the moonpay  * firebase.config() results are strictly typed  * responses changed to the recommended

--- a/functions/.eslintrc.json
+++ b/functions/.eslintrc.json
@@ -7,18 +7,13 @@
   },
   "parserOptions": {
     "ecmaVersion": 2021,
-    "sourceType": "module"
+    "sourceType": "module",
+    "project": [
+      "tsconfig.json",
+      "tsconfig.dev.json"
+    ]
   },
-  "plugins": [
-    "@typescript-eslint"
-  ],
-  "extends": [
-    "eslint:recommended",
-    "plugin:@typescript-eslint/recommended"
-  ],
-  "ignorePatterns": [
-    "tests/**/*.ts",
-    "node_modules"
-  ],
+  "plugins": ["@typescript-eslint"],
+  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
   "rules": {}
 }
