--- a/functions/.gitignore
+++ b/functions/.gitignore
@@ -3,7 +3,7 @@ lib/**/*.js
 lib/**/*.js.map
 
 # TypeScript v1 declaration files
-typings/
+typings
 
 # Node.js dependency directory
-node_modules/
+node_modules
