--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,20 +1,14 @@
 {
   "compilerOptions": {
-    "lib": [
-      "ES2021"
-    ],
+    "lib": ["ES2021", "dom"],
     "module": "ES2020",
     "moduleResolution": "node",
     "target": "ES2021",
     "outDir": "lib",
     "sourceMap": true,
-    "typeRoots": [
-      "node_modules/@types"
-    ],
+    "typeRoots": ["node_modules/@types"],
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true
   },
-  "include": [
-    "src"
-  ]
+  "include": ["./src"]
 }
