--- a/package.json
+++ b/package.json
@@ -132,7 +132,8 @@
     "@babel/runtime": "*"
   },
   "resolutions": {
-    "babel-core": "7.0.0-bridge.0"
+    "babel-core": "7.0.0-bridge.0",
+    "chalk": "4.1.2"
   },
   "fork-ts-checker": {
     "typescript": true
