--- a/functions/package.json
+++ b/functions/package.json
@@ -17,6 +17,7 @@
   "main": "lib/index.js",
   "dependencies": {
     "@sentry/node": "^6.17.2",
+    "firebase": "^9.6.5",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.16.0",
     "node-fetch": "^3.2.0",
