feat: github actions ci for the firebase-functions configured

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -43,3 +43,19 @@ jobs:
           target: mainnet
           projectId: zksync-vue-mainnet
           channelId: live
+
+      - name: "Deploy functions to firebase: zksync-vue-mainnet"
+        uses: w9jds/firebase-action@master
+        env:
+          PROJECT_ID: zksync-vue-mainnet
+          FIREBASE_TOKEN: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE_MAINNET }}'
+        with:
+          args: deploy --only functions
+
+      - name: "Deploy functions to firebase: zksync-vue-mainnet"
+        uses: w9jds/firebase-action@master
+        env:
+          PROJECT_ID: zksync-vue-mainnet
+          FIREBASE_TOKEN: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE_MAINNET }}'
+        with:
+          args: deploy --only functions
