--- a/functions/package.json
+++ b/functions/package.json
@@ -17,6 +17,7 @@
   "main": "lib/index.js",
   "dependencies": {
     "@sentry/node": "^6.17.2",
+    "cors": "^2.8.5",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.16.0",
     "node-fetch": "^3.2.0",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^13.0.6",
     "@rollup/plugin-typescript": "^8.3.0",
+    "@types/cors": "^2.8.12",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
     "eslint": "^8.4.1",
