--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -44,6 +44,9 @@ jobs:
           projectId: zksync-vue
           channelId: 'version-${{ github.ref }}'
 
+      - name: "Prepare /functions/"
+        run: npm --prefix functions i
+
       - name: "Deploy functions to firebase (staging)"
         uses: w9jds/firebase-action@master
         with:
