--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -32,6 +32,9 @@ jobs:
           projectId: zksync-vue
           channelId: live
 
+      - name: "Prepare /functions/"
+        run: npm --prefix functions i
+
       - name: "Deploy functions to firebase: zksync-vue"
         uses: w9jds/firebase-action@master
         with:
