fix: content-type check added, cors removed, loggers commented

--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -10,8 +10,7 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "types": [
-      "firebase-functions",
-      "cors"
+      "firebase-functions"
     ]
   },
   "include": ["./src"]
