--- a/environments/.env.mainnet
+++ b/environments/.env.mainnet
@@ -9,3 +9,4 @@ RAMP_RINKEBY_HOST_API_KEY=pcrtzve8ax7vjamoct77ombequtqhuxbc8wdknwg
 RAMP_ROPSTEN_HOST_API_KEY=85quy9gjwceh3rnca2nffo6wq67q776u6rjkyajf
 MOONPAY_RINKEBY_API_PUBLIC_KEY=pk_test_zHgHHYPTcKqAGfiCsiMOTRR6VuhSyV
 MIXPANEL_TOKEN=d6ce0bc1434361893bfa0084a601710c
+FIREBASE_FUNCTIONS_BASE_URL=https://us-central1-zksync-vue.cloudfunctions.net/
