--- a/functions/package.json
+++ b/functions/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@matterlabs/zksync-api-wallet",
+  "homepage": "https://console.firebase.google.com/u/0/project/zksync-vue/functions",
   "keywords": [
     "zksync",
     "firebase",
