--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "zksync": "latest"
   },
   "devDependencies": {
+    "@nuxtjs/proxy": "^2.1.0",
     "@babel/core": "^7.13.15",
     "@babel/preset-env": "^7.13.9",
     "@babel/runtime": "^7.13.10",
@@ -132,7 +133,8 @@
     "@babel/runtime": "*"
   },
   "resolutions": {
-    "babel-core": "7.0.0-bridge.0"
+    "babel-core": "7.0.0-bridge.0",
+    "chalk": "4.1.2"
   },
   "fork-ts-checker": {
     "typescript": true
