chore: fixes for the function + postcss updated to v.8 to avoid built errors

--- a/package.json
+++ b/package.json
@@ -130,7 +130,8 @@
   },
   "peerDependencies": {
     "@babel/core": "*",
-    "@babel/runtime": "*"
+    "@babel/runtime": "*",
+    "postcss": "8"
   },
   "resolutions": {
     "babel-core": "7.0.0-bridge.0",
