--- a/firebase.json
+++ b/firebase.json
@@ -34,6 +34,10 @@
           "function": "mixpanelTunnel"
         },
         {
+          "source": "/tunnel/sentry",
+          "function": "sentryTunnel"
+        },
+        {
           "source": "**",
           "destination": "/index.html"
         }
@@ -150,6 +154,10 @@
         {
           "source": "/tunnel/mixpanel/:path*",
           "function": "mixpanelTunnel"
+        },
+        {
+          "source": "/tunnel/sentry",
+          "function": "sentryTunnel"
         },
         {
           "source": "**",
