--- a/package.json
+++ b/package.json
@@ -130,7 +130,8 @@
   },
   "peerDependencies": {
     "@babel/core": "*",
-    "@babel/runtime": "*"
+    "@babel/runtime": "*",
+    "postcss": "8"
   },
   "resolutions": {
     "babel-core": "7.0.0-bridge.0",
@@ -159,7 +160,6 @@
   "lint-staged": {
     "*.{ts,tsx,vue}": [
       "yarn lint-ts:check --fix",
-      "yarn format",
       "yarn spell-check"
     ]
   },
