--- a/package.json
+++ b/package.json
@@ -67,12 +67,12 @@
     "mixpanel-browser": "^2.42.0",
     "moment-timezone": "^0.5.33",
     "multiformats": "^9.4.7",
-    "nuxt": "latest",
-    "nuxt-typed-vuex": "latest",
+    "nuxt": "^2.15.7",
+    "nuxt-typed-vuex": "^0.2.0",
     "oh-vue-icons": "^0.4.7",
-    "typed-vuex": "latest",
+    "typed-vuex": "^0.2.0",
     "vue": "2.*",
-    "vue-class-component": "latest",
+    "vue-class-component": "^7.2.6",
     "vue-qrcode": "0.4.0",
     "vue-router": "^3.5.2",
     "vue-scrollto": "^2.20.0",
