--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "url": "https://github.com/matter-labs/zksync-wallet-vue/issues"
   },
   "dependencies": {
-    "@matterlabs/zksync-nuxt-core": "^1.5.3",
+    "@matterlabs/zksync-nuxt-core": "^1.6.0",
     "@nuxt/typescript-runtime": "latest",
     "@nuxtjs/google-gtag": "latest",
     "@nuxtjs/sentry": "latest",
@@ -164,7 +164,7 @@
     ]
   },
   "scripts": {
-    "local": "sh ./cli-process-env.sh 'rinkeby-beta' 'prod' 1 1",
+    "local": "sh ./cli-process-env.sh 'rinkeby-beta' 'dev' 1 1",
     "dev": "yarn local && nuxt",
     "generate": "nuxt generate ",
     "start": "yarn local && nuxt start",
