feat: utorg config

--- a/package.json
+++ b/package.json
@@ -164,7 +164,7 @@
     ]
   },
   "scripts": {
-    "local": "sh ./cli-process-env.sh 'rinkeby-beta' 'prod' 1 1",
+    "local": "sh ./cli-process-env.sh 'rinkeby' 'prod' 1 1",
     "dev": "yarn local && nuxt",
     "generate": "nuxt generate ",
     "start": "yarn local && nuxt start",
