--- a/environments/.env.mainnet
+++ b/environments/.env.mainnet
@@ -7,6 +7,9 @@ ZK_NETWORK="mainnet"
 RAMP_MAINNET_HOST_API_KEY=j3b3oszn2vsr4qkz4att67zrucm6m6yjpfvxvtyy
 RAMP_RINKEBY_HOST_API_KEY=pcrtzve8ax7vjamoct77ombequtqhuxbc8wdknwg
 RAMP_ROPSTEN_HOST_API_KEY=85quy9gjwceh3rnca2nffo6wq67q776u6rjkyajf
+UTORG_MAINNET_SID=zksynkio
+UTORG_RINKEBY_SID=3_prO23xXW
+UTORG_ROPSTEN_SID=3_prO23xXW
 MOONPAY_RINKEBY_API_PUBLIC_KEY=pk_test_zHgHHYPTcKqAGfiCsiMOTRR6VuhSyV
 MIXPANEL_TOKEN=d6ce0bc1434361893bfa0084a601710c
 FIREBASE_FUNCTIONS_BASE_URL=https://us-central1-zksync-vue.cloudfunctions.net/
