--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "@matterlabs/zksync-zkwallet-vue",
   "title": "zkSync.io Wallet | Try solution for the Ethereum scalability\n with zero security compromises",
   "main": "nuxt.config.ts",
-  "types": [
-    "src/types/index.d.ts"
-  ],
+  "types": "src/types/index.d.ts",
   "files": [
     "src/types",
     "src"
@@ -55,11 +53,12 @@
     "url": "https://github.com/matter-labs/zksync-wallet-vue/issues"
   },
   "dependencies": {
+    "@matterlabs/eslint-config-nuxt": "^1.0.6",
+    "@matterlabs/prettier-config": "^1.0.2",
     "@matterlabs/zksync-nuxt-core": "1.6.2",
     "@nuxt/typescript-runtime": "latest",
     "@nuxtjs/google-gtag": "latest",
     "@nuxtjs/sentry": "latest",
-    "@nuxtjs/stylelint-module": "^4.0.0",
     "@ramp-network/ramp-instant-sdk": "^2.5.0",
     "blockies-ts": "1.0.0",
     "ethers": "^5.1.3",
@@ -67,11 +66,11 @@
     "mixpanel-browser": "^2.42.0",
     "moment-timezone": "^0.5.33",
     "multiformats": "^9.4.7",
-    "nuxt": "latest",
+    "nuxt": "^2.15.8",
     "nuxt-typed-vuex": "latest",
     "oh-vue-icons": "^0.4.7",
     "typed-vuex": "latest",
-    "vue": "2.*",
+    "vue": "^2.6.14",
     "vue-class-component": "latest",
     "vue-qrcode": "0.4.0",
     "vue-router": "^3.5.2",
@@ -79,19 +78,15 @@
     "zksync": "latest"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.15",
-    "@babel/preset-env": "^7.13.9",
-    "@babel/runtime": "^7.13.10",
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^16.0.0",
     "@inkline/nuxt": "^2.3.6",
-    "@nuxt/types": "latest",
-    "@nuxt/typescript-build": "latest",
-    "@nuxtjs/dotenv": "latest",
-    "@nuxtjs/eslint-config-typescript": "latest",
+    "@nuxt/types": "^2.15.8",
+    "@nuxt/typescript-build": "^2.1.0",
+    "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/google-fonts": "latest",
     "@nuxtjs/proxy": "^2.1.0",
-    "@nuxtjs/style-resources": "latest",
+    "@nuxtjs/style-resources": "^1.2.1",
     "@nuxtjs/tailwindcss": "^4.2.1",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/git": "^10.0.1",
@@ -99,43 +94,28 @@
     "@types/crypto-js": "^4.0.2",
     "@types/jest": "^26.0.23",
     "@types/mixpanel-browser": "^2.35.8",
-    "@typescript-eslint/eslint-plugin": "^4.21.0",
-    "@typescript-eslint/parser": "^4.21.0",
-    "babel-core": "^7.0.0-bridge.0",
     "commitlint": "^11.0.0",
     "cspell": "latest",
     "dotenv": "8.2.0",
-    "eslint": "^7.21.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-prettier-vue": "^2.1.1",
-    "eslint-plugin-vue": "^7.7.0",
-    "fork-ts-checker-webpack-plugin": "^6.1.0",
+    "eslint": "^8.12.0",
     "husky": "^7.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^12.1.5",
     "node-sass": "4.14.0",
+    "postcss": "8.1.0",
+    "postcss-html": "^1.3.0",
     "postcss-scss": "^4.0.3",
-    "prettier": "^2.2.1",
     "qrcode": "^1.0.0",
     "sass-loader": "^10.1.1",
     "semantic-release": "^18.0.1",
-    "stylelint": "latest",
-    "stylelint-config-standard-scss": "^3.0.0",
-    "stylelint-scss": "latest",
     "typescript": "4.2.4",
     "vue-property-decorator": "latest",
     "vuex": "^3.6.2",
     "webpack": "^4.46.0"
   },
-  "peerDependencies": {
-    "@babel/core": "*",
-    "@babel/runtime": "*",
-    "postcss": "8"
-  },
   "resolutions": {
-    "babel-core": "7.0.0-bridge.0",
-    "chalk": "4.1.2"
+    "chalk": "4.1.2",
+    "postcss": "8.1.0"
   },
   "fork-ts-checker": {
     "typescript": true
@@ -145,23 +125,24 @@
     "fs-extra": "^10.0.0",
     "fsevents": "^2.3.2"
   },
+  "lint-staged": {
+    "*.{js,ts}": [
+      "eslint --config .eslintrc.js --ignore-path .eslintignore",
+      "prettier -w"
+    ],
+    "*.scss": [
+      "prettier -w"
+    ],
+    "*.vue": [
+      "eslint --config .eslintrc.js --ignore-path .eslintignore",
+      "prettier -w"
+    ]
+  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged",
       "commit-msg": "commitlint --format -E HUSKY_GIT_PARAMS"
     }
-  },
-  "lint-fix": [
-    "yarn lint-style:fix",
-    "yarn lint-ts:fix",
-    "yarn format:prettier --write",
-    "yarn spell-check"
-  ],
-  "lint-staged": {
-    "*.{ts,tsx,vue}": [
-      "yarn lint-ts:check --fix",
-      "yarn spell-check"
-    ]
   },
   "scripts": {
     "local": "sh ./cli-process-env.sh 'rinkeby' 'prod' 1 1",
@@ -182,15 +163,19 @@
     "ci:prepare:ropsten": "sh cli-process-env.sh 'ropsten' prod 1",
     "ci:prepare:mainnet": "sh cli-process-env.sh 'mainnet' prod 1",
     "test": "jest",
-    "format:prettier": "prettier --config .prettierrc.js --ignore-path .prettierignore",
-    "lint-ts:check": "eslint --config .eslintrc.js --ignore-path .eslintignore",
-    "lint-ts:fix": "yarn lint-ts:check --fix ./src/**/*.{ts,vue,js}",
-    "lint-style:check": "stylelint --config .stylelintrc --ignore-path .stylelintignore",
-    "lint-style:fix": "yarn lint-style:check --fix ./src/**/*.scss",
+    "format:prettier": " prettier -w src",
+    "lint": "eslint --config .eslintrc.js --ignore-path .eslintignore src/**/*.{ts,vue,js}",
+    "lint:fix": "eslint --fix --config .eslintrc.js --ignore-path .eslintignore src/**/*.{ts,vue,js} --fix",
     "spell-check": "cspell -c cspell.json src/**/*.{ts,vue,js} *.md",
-    "ci:check": "yarn lint-ts:check && yarn lint-style:check && yarn spell-check",
+    "ci:check": "yarn lint && yarn spell-check",
     "semantic-release": "semantic-release",
     "postinstall": "husky install"
+  },
+  "prettier": "@matterlabs/prettier-config",
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
   },
   "packageManager": "yarn@3.1.1"
 }
