--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,20 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
     "allowJs": true,
     "baseUrl": "./src",
     "checkJs": false,
     "declaration": true,
     "esModuleInterop": true,
+    "importHelpers": true,
     "experimentalDecorators": true,
     "lib": [
       "es2019",
       "dom",
       "es2019.object",
       "esnext",
+      "dom.iterable",
       "esnext.asynciterable"
     ],
     "module": "esnext",
@@ -28,6 +31,7 @@
     },
     "suppressImplicitAnyIndexErrors": true,
     "resolveJsonModule": true,
+    "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
     "target": "ESNext",
@@ -44,15 +48,20 @@
       "vue-qrcode"
     ]
   },
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue"
+  ],
   "exclude": [
     "functions",
-    "node_modules/*",
-    "dist/*",
-    ".yarn/*",
-    "public/*",
-    ".nuxt/*",
-    ".github/*",
-    "environments/*",
-    "tests/*"
+    "node_modules",
+    "dist",
+    ".yarn",
+    "public",
+    ".nuxt",
+    ".github",
+    "environments",
+    "tests"
   ]
 }
