feat: refactored code & major configs reconfigured to use publicRuntimeConfig
  * Dropped icons.ts (used to store 4 svg images)
  * 3 plugins set to be transpiled, fixed contenthash warn during the build
  * dropped > 10 dependencies
  * /functions/ isolated from the root-src
  * @deprecated slot fixed
  * more type-definitions have been added
  and more...

Closes ZKF-1478

--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "rootDir": "functions/src",
     "lib": ["esnext", "dom"],
     "module": "esnext",
     "moduleResolution": "node",
@@ -13,5 +14,12 @@
       "firebase-functions"
     ]
   },
-  "include": ["./src"]
+  "include": [
+    "functions/src/**/*.ts"
+  ],
+  "exclude": [
+    "nuxt.config.ts",
+    "functions/node_modules",
+    "functions/lib"
+  ]
 }
