--- a/package.json
+++ b/package.json
@@ -56,35 +56,31 @@
     "@matterlabs/eslint-config-nuxt": "^1.0.6",
     "@matterlabs/prettier-config": "^1.0.2",
     "@matterlabs/zksync-nuxt-core": "1.6.2",
-    "@nuxt/typescript-runtime": "latest",
-    "@nuxtjs/google-gtag": "latest",
-    "@nuxtjs/sentry": "latest",
+    "@nuxt/typescript-runtime": "^2.1.0",
+    "@nuxtjs/google-gtag": "^1.0.4",
+    "@nuxtjs/sentry": "^5.1.7",
     "@ramp-network/ramp-instant-sdk": "^2.5.0",
     "blockies-ts": "1.0.0",
-    "ethers": "^5.1.3",
     "lottie-web": "^5.7.8",
     "mixpanel-browser": "^2.42.0",
     "moment-timezone": "^0.5.33",
     "multiformats": "^9.4.7",
     "nuxt": "^2.15.8",
-    "nuxt-typed-vuex": "latest",
+    "nuxt-typed-vuex": "^0.3.0",
     "oh-vue-icons": "^0.4.7",
-    "typed-vuex": "latest",
-    "vue": "^2.6.14",
-    "vue-class-component": "latest",
     "vue-qrcode": "0.4.0",
-    "vue-router": "^3.5.2",
-    "vue-scrollto": "^2.20.0",
     "zksync": "latest"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^16.0.0",
+    "@ethersproject/address": "^5.5.0",
+    "@ethersproject/bignumber": "^5.5.0",
     "@inkline/nuxt": "^2.3.6",
     "@nuxt/types": "^2.15.8",
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/dotenv": "^1.4.1",
-    "@nuxtjs/google-fonts": "latest",
+    "@nuxtjs/google-fonts": "^1.3.0",
     "@nuxtjs/proxy": "^2.1.0",
     "@nuxtjs/style-resources": "^1.2.1",
     "@nuxtjs/tailwindcss": "^4.2.1",
@@ -95,34 +91,23 @@
     "@types/jest": "^26.0.23",
     "@types/mixpanel-browser": "^2.35.8",
     "commitlint": "^11.0.0",
-    "cspell": "latest",
-    "dotenv": "8.2.0",
+    "cspell": "^5.19.3",
     "eslint": "^8.12.0",
     "husky": "^7.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^12.1.5",
     "node-sass": "4.14.0",
-    "postcss": "8.1.0",
-    "postcss-html": "^1.3.0",
-    "postcss-scss": "^4.0.3",
     "qrcode": "^1.0.0",
     "sass-loader": "^10.1.1",
-    "semantic-release": "^18.0.1",
-    "typescript": "4.2.4",
-    "vue-property-decorator": "latest",
-    "vuex": "^3.6.2",
-    "webpack": "^4.46.0"
+    "semantic-release": "^18.0.1"
   },
   "resolutions": {
     "chalk": "4.1.2",
-    "postcss": "8.1.0"
-  },
-  "fork-ts-checker": {
-    "typescript": true
+    "webpack": "^4.46.0"
   },
   "optionalDependencies": {
     "@sentry/webpack-plugin": "^1.18.3",
-    "fs-extra": "^10.0.0",
+    "fs-extra": "^10.0.1",
     "fsevents": "^2.3.2"
   },
   "lint-staged": {
