feat: Argent remote wallet support (#225)
* feat: argent login option

* fix: use latest zksync alpha

* fix: send correct batch signature format

* fix: better handle batch response tokens and amounts

* fix: do not check for cpk for argent, style fixes

* fix: small wallets tile stile fix

* feat: open wallet app

* fix: wallet connect deep link for testnet argent

* fix: standardized wc deep link

* fix: argent deep link

* fix: open Argent wallet on iOS

* feat: show warning for NFT operations with Argent

* feat: open argent wallet with one tap on mobile

* fix: deeplinks

* fix: use latest nuxt core module version

--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "url": "https://github.com/matter-labs/zksync-wallet-vue/issues"
   },
   "dependencies": {
-    "@matterlabs/zksync-nuxt-core": "1.6.2",
+    "@matterlabs/zksync-nuxt-core": "1.7.0",
     "@nuxt/typescript-runtime": "latest",
     "@nuxtjs/google-gtag": "latest",
     "@nuxtjs/sentry": "latest",
@@ -67,16 +67,16 @@
     "mixpanel-browser": "^2.42.0",
     "moment-timezone": "^0.5.33",
     "multiformats": "^9.4.7",
-    "nuxt": "latest",
-    "nuxt-typed-vuex": "latest",
+    "nuxt": "^2.15.7",
+    "nuxt-typed-vuex": "^0.2.0",
     "oh-vue-icons": "^0.4.7",
-    "typed-vuex": "latest",
+    "typed-vuex": "^0.2.0",
     "vue": "2.*",
-    "vue-class-component": "latest",
+    "vue-class-component": "^7.2.6",
     "vue-qrcode": "0.4.0",
     "vue-router": "^3.5.2",
     "vue-scrollto": "^2.20.0",
-    "zksync": "latest"
+    "zksync": "0.12.0-alpha.6"
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
